# mlops-spam-classifier

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
k8s/: deployment.yaml  hpa.yaml  service.yaml
src/: main.py  model_utils.py  schemas.py  train.py
static/: index.html
tests/: test_api.py  test_train.py
